Added a resources, about, contact and story page. Also applied styles with css and begam building out html.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Capstone: InkWizard</title>
   </head>
-  <header>
-    <h1>InkWizard</h1>
+  <header class = "largeHeader">
+    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
     <nav>Home | About | Resources | Story Page | Contact Me</nav>
 
   </header>
 
+
     <main>
+
+      <H1 Id = "Welcome">Welcome to InkWizard</H1>
+      <h2>We help you bring your stories to life!</h2>
+
+      <h3>Plan your story</h3>
+
+      <p>Plan your story chapter by chapter and make it easy to keep track of important information!</p>
+
+      <h3>Create dynamic characters</h3>
+
+      <p>Add character profiles to flesh out your characters and keep track of things like
+        personality traits, physical appearance, backstories ect.</p>
+
+        <h3>Learn how to become a better writer</h3>
+
+      <p>With InkWizard you get access to a wealth of resources and information.</p>
 
 
     </main>
