Redid the homepage. Added nav bar. Added images. fleshed out css styles.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,36 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Capstone: InkWizard</title>
   </head>
-  <header class = "largeHeader">
-    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
-    <nav>Home | About | Resources | Story Page | Contact Me</nav>
 
-  </header>
+  <header>
+
+
+    <div class = "topNav" style="height: 60px;">
+      <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+
+      <a href = "#contact">Contact Us</a>
+      <a href = "#story-page">Story Page</a>
+      <a href = "#resources">Resources</a>
+      <a href = "#about">About</a>
+      <a class = "active" href = "#home">Home</a>
+    </div>
+
+   </header>
+
+   <div id = "lrgHeader">
+
+    <!-- <img src="InkBg.jpg" alt="Header image" style="width:60%" > -->
+
+    <H1 id = "welcome">Welcome to InkWizard</H1>
+      <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
+
+
+   </div>
 
 
     <main>
 
-      <H1 Id = "Welcome">Welcome to InkWizard</H1>
-      <h2>We help you bring your stories to life!</h2>
+
 
       <h3>Plan your story</h3>
 
