--- a/resources.html
+++ b/resources.html
@@ -7,9 +7,22 @@
   <title>Resources</title>
 </head>
 
-<header class = "smallHeader">
-  <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
-  <nav>Home | About | Resources | Story Page | Contact Me</nav>
+<header>
+
+
+  <div class = "topNav">
+    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
+
+    <a href = "#contact">Contact Us</a>
+    <a href = "#story-page">Story Page</a>
+    <a href = "#resources">Resources</a>
+    <a href = "#about">About</a>
+    <a class = "active" href = "#home">Home</a>
+  </div>
+
+
+
+
 
 </header>
 
