Added media querys, added google fonts and normalize css, added hamburger icon, added form and linked it to formspree

--- a/story-page.html
+++ b/story-page.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
+
   <link rel="stylesheet" type="text/css" href="style.css" />
   <title>Story Page</title>
 </head>
 
 <header>
 
-  <div class = "topNav">
-    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
+
+  <div class = "topNav" style="height: 60px;" >
+    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
     <a href = "#contact">Contact Us</a>
     <a href = "#story-page">Story Page</a>
@@ -19,7 +29,7 @@
     <a class = "active" href = "#home">Home</a>
   </div>
 
-</header>
+ </header>
 
 <body>
 
