--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
+
+
   <title>Contact</title>
 </head>
 
 <header>
 
 
-  <div class = "topNav">
-    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
+  <div class = "topNav" style="height: 60px;" >
+    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
     <a href = "#contact">Contact Us</a>
     <a href = "#story-page">Story Page</a>
@@ -20,17 +30,72 @@
     <a class = "active" href = "#home">Home</a>
   </div>
 
-
-
-
-
-</header>
+ </header>
 
 <body>
 
   <h3>Contact Me</h3>
 
-  <!-- Insert contact form here -->
+<div class="contactForm">
+
+  <form action="https://formspree.io/f/mnqkeozk" method="POST">
+
+
+
+    <label for="name">Name:</label>
+    <br>
+    <input type="text" name="name" id="name" placeholder="Full Name" required />
+    <br>
+    <br>
+
+    <label for="email">Email:</label>
+    <br>
+    <input type="email" name="email" id="email" placeholder="you@somewhere.com" />
+    <br>
+    <br>
+
+    <label for="phone">Phone:</label>
+    <br>
+    <input type="tel" name="phone" id="phone" placeholder="555-555-5555" />
+    <br>
+    <br>
+
+      <label for="msg">Subject:</label>
+      <br>
+      <textarea name="message" id="msg" cols="30" rows="10"></textarea>
+
+
+    <br>
+
+    <div>
+      <h5>What's this message about?</h5>
+      <div>
+        <input
+          type="radio"
+          name="subject"
+          value="professional"
+          id="pro"
+          checked
+        />
+        <label for="pro">I'd like to hire you!</label>
+      </div>
+      <div>
+        <input type="radio" name="subject" value="personal" id="personal" />
+        <label for="personal">Personal message</label>
+      </div>
+      <div>
+        <input type="radio" name="subject" value="other" />
+        <label>Don't know/something else</label>
+      </div>
+    </div>
+
+
+</div>
+<br>
+
+
+    <input type="submit" value="Submit" id = "buttonS" />
+  </form>
 
   <!-- Include links to socials and a photo of myself -->
 
