--- a/index.html
+++ b/index.html
@@ -4,21 +4,44 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
+
     <title>Capstone: InkWizard</title>
   </head>
 
   <header>
 
 
-    <div class = "topNav" style="height: 60px;">
-      <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-      <a href = "#contact">Contact Us</a>
-      <a href = "#story-page">Story Page</a>
-      <a href = "#resources">Resources</a>
-      <a href = "#about">About</a>
-      <a class = "active" href = "#home">Home</a>
-    </div>
+
+    <nav class = "topNav" style="height; 60px">
+
+
+
+        <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+
+        <div class="hidden--mobile"></div>
+
+        <a href = "#contact" class="hidden--mobile">Contact Us</a>
+        <a href = "#story-page" class="hidden--mobile">Story Page</a>
+        <a href = "#resources" class="hidden--mobile">Resources</a>
+        <a href = "#about" class="hidden--mobile">About</a>
+        <a class = "active hidden--mobile" href = "#home">Home</a>
+
+      </div>
+
+        <i class="fa-solid fa-bars"></i>
+
+
+
+    </nav>
 
    </header>
 
@@ -26,11 +49,12 @@
 
     <!-- <img src="InkBg.jpg" alt="Header image" style="width:60%" > -->
 
-    <H1 id = "welcome">Welcome to InkWizard</H1>
-      <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
+
 
 
    </div>
+   <H1 id = "welcome">Welcome to InkWizard</H1>
+      <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
 
 
     <main>
