--- a/resources.html
+++ b/resources.html
@@ -4,14 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
+
   <title>Resources</title>
 </head>
 
 <header>
 
 
-  <div class = "topNav">
-    <img src="InkWizard-Logo.svg" alt="InkWizard Logo" style="width:25%" id = "logo">
+  <div class = "topNav" style="height: 60px;" >
+    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
     <a href = "#contact">Contact Us</a>
     <a href = "#story-page">Story Page</a>
@@ -20,13 +29,14 @@
     <a class = "active" href = "#home">Home</a>
   </div>
 
-
-
-
-
-</header>
+ </header>
 
 <body>
+
+  <span width = "25%">
+
+
+  </span>
 
   <h3>Helpful Links</h3>
   <p>Link here</p>
