Updated design and media query

--- a/about.html
+++ b/about.html
@@ -19,27 +19,70 @@
 
 <header>
 
+  <nav class = "topNav" style="height; 60px">
 
-  <div class = "topNav" style="height: 60px;" >
+
+
     <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-    <a href = "#contact">Contact Us</a>
-    <a href = "#story-page">Story Page</a>
-    <a href = "#resources">Resources</a>
-    <a href = "#about">About</a>
-    <a class = "active" href = "#home">Home</a>
+    <div class="hidden--mobile"></div>
+
+    <a href = "#contact" class="hidden--mobile">Contact Us</a>
+    <a href = "#story-page" class="hidden--mobile">Story Page</a>
+    <a href = "#resources" class="hidden--mobile">Resources</a>
+    <a href = "#about" class="hidden--mobile">About</a>
+    <a class = "active hidden--mobile" href = "#home">Home</a>
+
   </div>
+
+
+
+  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
+
+    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
+
+  </a>
+
+
+
+
+</nav>
 
  </header>
 
 <body>
 
-<h3>Why InkWizard?</h3>
+  <div class = "headerGrid">
+
+    <div id = "smallHeader"> </div>
+
+
+   </div>
+
+   <div class="centeredContent">
+
+    <div class="centered">
+
+      <h3 class="h3Padded">Why InkWizard?</h3>
 <p>InkWizard is an app that I made based on my personal experiences. I grew up loving reading and would
   often write my own short stories. As I got older and started writing longer and more complex stories I
   began having trouble keeping up with all the little details and my stories declined in quality. I realized if I had a program to help me take notes and keep track of information my writing process would go
   much smoother. InkWizard was my solution.
 </p>
 
+      </div>
+    </div>
+
+
+
 </body>
+
+
+<footer>
+
+  <img src="WInkLg.svg" alt="InkWizard Logo" style="width:10%" id = "bottomLogo">
+
+
+</footer>
+
 </html>
