--- a/index.html
+++ b/index.html
@@ -13,67 +13,52 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
 
-    <title>Capstone: InkWizard</title>
+    <title>Home</title>
   </head>
 
-  <header>
+  <header style="height: 10px; background-color: var(--highlight-color);">
 
-
-
+  </header>
 
     <nav class = "topNav" style="height; 60px">
 
 
 
-        <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-        <div id="hiddenMobile">
+    <div id="hiddenMobile">
 
-        <a href = "#contact" class="mobile">Contact Us</a>
-        <a href = "#story-page" class="mobile">Story Page</a>
-        <a href = "#resources" class="mobile">Resources</a>
-        <a href = "#about" class="mobile">About</a>
-        <a class = "active mobile" href = "#home">Home</a>
+    <a href = "#contact" class="mobile">Contact Us</a>
+    <a href = "#story-page" class="mobile">Story Page</a>
+    <a href = "#resources" class="mobile">Resources</a>
+    <a href = "#about" class="mobile">About</a>
+    <a class = "active mobile" href = "#home">Home</a>
 
-      </div>
-
-
-      <div class="hamburgerMenu">
-
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-
-      </div>
+  </div>
 
 
+  <div class="hamburgerMenu">
 
-      <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
 
-        <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
-
-      </a>
+  </div>
 
 
 
+  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
 
-    </nav>
+    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
 
-   </header>
-
-   <div class = "headerGrid">
-
-    <div id = "lrgHeader"> </div>
-
-    <div id = "headerSideBar">
-
-      <img src="WelToIw.svg" alt="InkWizard Welcome Logo" style="width:30%" id = "welcomeLogo">
-
-      <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
-    </div>
+  </a>
 
 
-   </div>
+
+
+</nav>
+
+
 
 
 
@@ -82,6 +67,20 @@
 
 
     <main>
+
+      <div class = "headerGrid">
+
+        <div id = "lrgHeader"> </div>
+
+        <div id = "headerSideBar">
+
+          <img src="WelToIw.svg" alt="InkWizard Welcome Logo" style="width:30%" id = "welcomeLogo">
+
+          <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
+        </div>
+
+
+       </div>
 
       <div class="centeredContent">
 
@@ -107,7 +106,7 @@
 
 
 
-
+        <script src="index.js"></script>
 
     </main>
 
@@ -118,7 +117,7 @@
 
 
     </footer>
-    <script src="index.js"></script>
+
 
 
 </html>
