Started the spa process

--- a/about.html
+++ b/about.html
@@ -17,65 +17,49 @@
   <title>Document</title>
 </head>
 
-<header>
+<header style="height: 10px; background-color: var(--highlight-color);">
+
+</header>
 
   <nav class = "topNav" style="height; 60px">
 
 
 
-    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+  <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-    <div class="hidden--mobile"></div>
+  <div id="hiddenMobile">
 
-    <a href = "#contact" class="hidden--mobile">Contact Us</a>
-    <a href = "#story-page" class="hidden--mobile">Story Page</a>
-    <a href = "#resources" class="hidden--mobile">Resources</a>
-    <a href = "#about" class="hidden--mobile">About</a>
-    <a class = "active hidden--mobile" href = "#home">Home</a>
+  <a href = "#contact" class="mobile">Contact Us</a>
+  <a href = "#story-page" class="mobile">Story Page</a>
+  <a href = "#resources" class="mobile">Resources</a>
+  <a href = "#about" class="mobile">About</a>
+  <a class = "active mobile" href = "#home">Home</a>
 
-  </div>
+</div>
+
+
+<div class="hamburgerMenu">
+
+  <span class="bar"></span>
+  <span class="bar"></span>
+  <span class="bar"></span>
+
+</div>
 
 
 
-  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
+<a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
 
-    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
+  <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
 
-  </a>
+</a>
 
 
 
 
 </nav>
 
- </header>
 
-<body>
-
-  <div class = "headerGrid">
-
-    <div id = "smallHeader"> </div>
-
-
-   </div>
-
-   <div class="centeredContent">
-
-    <div class="centered">
-
-      <h3 class="h3Padded">Why InkWizard?</h3>
-<p>InkWizard is an app that I made based on my personal experiences. I grew up loving reading and would
-  often write my own short stories. As I got older and started writing longer and more complex stories I
-  began having trouble keeping up with all the little details and my stories declined in quality. I realized if I had a program to help me take notes and keep track of information my writing process would go
-  much smoother. InkWizard was my solution.
-</p>
-
-      </div>
-    </div>
-
-
-
-</body>
 
 
 <footer>
