--- a/resources.html
+++ b/resources.html
@@ -16,127 +16,49 @@
   <title>Resources</title>
 </head>
 
-<header>
+<header style="height: 10px; background-color: var(--highlight-color);">
+
+</header>
 
   <nav class = "topNav" style="height; 60px">
 
 
 
-    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+  <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-    <div class="hidden--mobile"></div>
+  <div id="hiddenMobile">
 
-    <a href = "#contact" class="hidden--mobile">Contact Us</a>
-    <a href = "#story-page" class="hidden--mobile">Story Page</a>
-    <a href = "#resources" class="hidden--mobile">Resources</a>
-    <a href = "#about" class="hidden--mobile">About</a>
-    <a class = "active hidden--mobile" href = "#home">Home</a>
+  <a href = "#contact" class="mobile">Contact Us</a>
+  <a href = "#story-page" class="mobile">Story Page</a>
+  <a href = "#resources" class="mobile">Resources</a>
+  <a href = "#about" class="mobile">About</a>
+  <a class = "active mobile" href = "#home">Home</a>
 
-  </div>
+</div>
+
+
+<div class="hamburgerMenu">
+
+  <span class="bar"></span>
+  <span class="bar"></span>
+  <span class="bar"></span>
+
+</div>
 
 
 
-  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
+<a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
 
-    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
+  <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
 
-  </a>
+</a>
 
 
 
 
 </nav>
 
- </header>
 
-<body>
-
-
-  <div class = "headerGrid">
-
-    <div id = "smallHeader"> </div>
-
-
-   </div>
-
-   <div class="centeredContent">
-
-
-
-
-    <div class="centered">
-
-
-
-      <h3 class="h3Padded">Helpful Resources</h3>
-
-      <br>
-      <hr width="100%" size="9" color="#f2f2f2">
-      <br>
-
-  <a class="links" href="https://www.canva.com/">Canva</a>
-  <p>A graphic design platform, Canva allows users to create dynamic
-    visuals for social media, book covers, and much more. Most templates
-    and features are free, but a subscription gives users access to more
-    content.</p>
-
-    <a class="links" href="https://createifwriting.com/">Create If Writing</a>
-  <p>Every author needs to build an online platform, even if most dread
-    calling it that. Create If Writing shows how to grow your online
-    presence without “being smarmy”—as they put it—through their blog,
-    podcast, and workshops.</p>
-
-    <a class="links" href="https://copyright.gov/">Copyright Office of the United States</a>
-  <p>Learn about the basics of copyright law, search copyright records,
-    register your own creative works, and get your questions answered
-    straight from the office in charge of it all.</p>
-
-    <a class="links" href="https://www.diversitystyleguide.com/">Diversity Style Guide</a>
-  <p>Want to make sure you refer to people in groups or communities to which
-    you don't belong with respect and accuracy in your writing?
-    The Diversity Style Guide “contains more than 700 terms related to
-    race/ethnicity, disability, immigration, sexuality and gender identity,
-    drugs and alcohol, and identity” so you can do the work and inform yourself.</p>
-
-    <div id ="writerPic">
-      <img src="writerImg.jpg" alt="Writer Image" style="width:70%" style="height: 15%;">
-    </div>
-
-    <a class="links" href="https://reedsy.com/">Reedsy</a>
-    <p>An author services platform that allows authors to find and hire
-      publishing professionals, Reedsy connects authors with everyone from
-      developmental editors to book cover designers, publicists, and
-      translators. Their free blog also gives authors tips and tricks
-      to take their manuscripts to the next level.</p>
-
-      <a class="links" href="https://authornews.penguinrandomhouse.com/10-ways-to-beat-writers-block/">10 Ways to Beat Writer's Block</a>
-    <p>We asked some of our authors to anonymously share their best
-      ideas on how to beat writer's block.</p>
-
-      <a class="links" href="https://getitwriteonline.com/">Get It Write</a>
-    <p>Dr. Nancy Tuten says that “if your writing looks professional,
-      so do you,”—so the former university-level writing instructor
-      has you covered in her articles about grammar, usage, word mechanics,
-      punctuation, and other popular topics.</p>
-
-      <a class="links" href="https://hemingwayapp.com/">Hemingway Editor</a>
-    <p>This editing tool is helpful if you want to make your writing bold and
-      clear. Using highlights, it shows you when a sentence is too long and
-      complicated, has common errors, or relies too heavily on weak language</p>
-    </div>
-
-
-
-
-
-   </div>
-
-
-
-
-
-
-</body>
 
 <footer>
 
