--- a/story-page.html
+++ b/story-page.html
@@ -16,181 +16,49 @@
   <title>Story Page</title>
 </head>
 
-<header>
+<header style="height: 10px; background-color: var(--highlight-color);">
 
+</header>
 
   <nav class = "topNav" style="height; 60px">
 
 
 
-    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
+  <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
 
-    <div class="hidden--mobile"></div>
+  <div id="hiddenMobile">
 
-    <a href = "#contact" class="hidden--mobile">Contact Us</a>
-    <a href = "#story-page" class="hidden--mobile">Story Page</a>
-    <a href = "#resources" class="hidden--mobile">Resources</a>
-    <a href = "#about" class="hidden--mobile">About</a>
-    <a class = "active hidden--mobile" href = "#home">Home</a>
+  <a href = "#contact" class="mobile">Contact Us</a>
+  <a href = "#story-page" class="mobile">Story Page</a>
+  <a href = "#resources" class="mobile">Resources</a>
+  <a href = "#about" class="mobile">About</a>
+  <a class = "active mobile" href = "#home">Home</a>
 
-  </div>
+</div>
+
+
+<div class="hamburgerMenu">
+
+  <span class="bar"></span>
+  <span class="bar"></span>
+  <span class="bar"></span>
+
+</div>
 
 
 
-  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
+<a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
 
-    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
+  <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
 
-  </a>
+</a>
 
 
 
 
 </nav>
 
- </header>
 
-<body>
-
-  <div class = "headerGrid">
-
-    <div id = "smallHeader"> </div>
-</div>
-
-
-
-
-
-   <div id="storyPgGrid">
-
-      <div id="storySidebar">
-       <button class="tabs" onClick="openSection(event, 'characters')">Characters</button>
-       <button class="tabs" onClick="openSection(event, 'chapters')">Chapters</button>
-       <button class="tabs" onClick="openSection(event, 'notes')">Notes</button>
-      </div>
-
-
-
-      <!-- Character Page -->
-      <div id="characters" class="tabContent">
-        <h3>Character Profiles</h3>
-
-        <label for="name">Name:</label>
-          <br>
-          <input type="text" name="name" id="name" placeholder="Full Name" />
-          <br>
-
-          <label for="name">Age:</label>
-          <br>
-          <input type="text" name="age" id="age" placeholder="Age" />
-          <br>
-
-          <label for="name">Gender:</label>
-          <br>
-          <input type="text" name="gender" id="gender" placeholder="Gender" />
-          <br>
-
-          <label for="name">Species:</label>
-          <br>
-          <input type="text" name="Species" id="Species" placeholder="Species" />
-          <br>
-
-          <label for="name">Nationality:</label>
-          <br>
-          <input type="text" name="Nationality" id="Nationality" placeholder="Nationality" />
-          <br>
-
-          <label for="name">Occupation:</label>
-          <br>
-          <input type="text" name="Occupation" id="Occupation" placeholder="Occupation" />
-          <br>
-
-          <label for="name">Religion:</label>
-          <br>
-          <input type="text" name="Religion" id="Religion" placeholder="Religion" />
-          <br>
-
-          <label for="name">Hair Color:</label>
-          <br>
-          <input type="text" name="Hair" id="Hair" placeholder="Hair Color" />
-          <br>
-
-          <label for="name">Eye Color:</label>
-          <br>
-          <input type="text" name="Eye" id="Eye" placeholder="Eye Color" />
-          <br>
-
-            <label for="name">Bio</label>
-            <br>
-            <textarea name="bio" id="bio" cols="40" rows="15"></textarea>
-
-            <input type="submit" value="Submit" id = "buttonS" />
-
-            <hr width="100%" size="9" color="#f2f2f2">
-
-             <!-- Add storage area here -->
-
-
-      </div>
-
-
-      <!-- Chapters Page -->
-      <div id="chapters" class="tabContent">
-        <h3>Create A New Chapter Summary</h3>
-
-        <label for="name">Chapter Title:</label>
-          <br>
-          <input type="text" name="chapterTitle" id="chapterTitle" placeholder="Chapter Title" />
-          <br>
-
-        <label for="name">Summary:</label>
-            <br>
-            <textarea name="bio" id="bio" cols="40" rows="15"></textarea>
-
-            <input type="submit" value="Submit" id = "buttonS" />
-            <br>
-            <br>
-
-            <hr width="100%" size="9" color="#f2f2f2">
-
-            <h3>Chapter Summaries</h3>
-
-            Add storage area here
-
-      </div>
-
-
-
-       <!-- Notes Page -->
-       <div id="notes" class="tabContent">
-        <h3>Create A New Note</h3>
-
-        <label for="name">Chapter Title:</label>
-          <br>
-          <input type="text" name="chapterTitle" id="chapterTitle" placeholder="Chapter Title" />
-          <br>
-
-        <label for="name">Summary:</label>
-            <br>
-            <textarea name="bio" id="bio" cols="40" rows="15"></textarea>
-
-            <input type="submit" value="Submit" id = "buttonS" />
-            <br>
-            <br>
-
-            <hr width="100%" size="9" color="#f2f2f2">
-
-            <h3>Notes</h3>
-             <!-- Add storage area here -->
-
-
-      </div>
-
-   </div>
-
-   <script src="index.js"></script>
-
-</body>
 
 <footer>
 
