--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 
-<html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+
+
+
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
@@ -16,107 +23,16 @@
     <title>Home</title>
   </head>
 
-  <header style="height: 10px; background-color: var(--highlight-color);">
-
-  </header>
-
-    <nav class = "topNav" style="height; 60px">
-
-
-
-    <img src="iWLogo.svg" alt="InkWizard Logo" style="width:10%" id = "logo">
-
-    <div id="hiddenMobile">
-
-    <a href = "#contact" class="mobile">Contact Us</a>
-    <a href = "#story-page" class="mobile">Story Page</a>
-    <a href = "#resources" class="mobile">Resources</a>
-    <a href = "#about" class="mobile">About</a>
-    <a class = "active mobile" href = "#home">Home</a>
-
-  </div>
-
-
-  <div class="hamburgerMenu">
-
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-
-  </div>
-
-
-
-  <a href="javascript:void(0);" class="hMenu" onclick="toggleMenu()">
-
-    <i class="fa-solid fa-bars" style="font-size: 200%;"></i>
-
-  </a>
 
 
 
 
-</nav>
+<body>
+  <div id="root"></div>
+      <script type="module" src="index.js"></script>
+</body>
 
 
-
-
-
-
-
-
-
-    <main>
-
-      <div class = "headerGrid">
-
-        <div id = "lrgHeader"> </div>
-
-        <div id = "headerSideBar">
-
-          <img src="WelToIw.svg" alt="InkWizard Welcome Logo" style="width:30%" id = "welcomeLogo">
-
-          <h2 id = "welcomeSH">We help you bring your stories to life!</h2>
-        </div>
-
-
-       </div>
-
-      <div class="centeredContent">
-
-        <div class="centered">
-
-          <h3 class="h3Padded">Plan your story</h3>
-
-          <p>Plan your story chapter by chapter and make it easy to keep track of important information!</p>
-
-          <h3 class="h3Padded">Create dynamic characters</h3>
-
-          <p>Add character profiles to flesh out your characters and keep track of things like
-            personality traits, physical appearance, backstories ect.</p>
-
-            <h3 class="h3Padded">Learn how to become a better writer</h3>
-
-          <p>With InkWizard you get access to a wealth of resources and information.</p>
-
-          </div>
-        </div>
-
-
-
-
-
-        <script src="index.js"></script>
-
-    </main>
-
-
-    <footer>
-
-      <img src="WInkLg.svg" alt="InkWizard Logo" style="width:10%" id = "bottomLogo">
-
-
-    </footer>
 
 
 
