--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 
 
 
@@ -21,18 +21,20 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"rel="stylesheet"/>
 
     <title>Home</title>
+
   </head>
 
-
+<header></header>
 
 
 
 <body>
+  <script type="module" src="index.js"></script>
   <div id="root"></div>
-      <script type="module" src="index.js"></script>
+
 </body>
 
-
+<footer></footer>
 
 
 
