--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 
 <body>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="index.js">
+
+  </script>
   <div id="root"></div>
 
 </body>
